--- a/pandas/pandasDfMod.ipynb
+++ b/pandas/pandasDfMod.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "import pandas as pd\n",
     "import missingno as msno\n",
-    "import pyplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "filePath = \"../data/avgIQpercountry.csv\"\n",
     "\n",
@@ -111,10 +111,12 @@
     "\n",
     "# Check to see if there are any NaN fields, use missing no to create some visualization to see these\n",
     "msno.matrix(df)\n",
+    "plt.show()\n",
     "print(\"----------------------------------------\")\n",
-    "# msno.bar(df)\n",
+    "msno.bar(df)\n",
+    "plt.show()\n",
     "msno.dendrogram(df)\n",
-    "# plt.show()"
+    "plt.show()"
    ]
   }
  ],
