Creating buckets is now working. Adding other ifs in next commit

--- a/project/src/moviesDF.ipynb
+++ b/project/src/moviesDF.ipynb
@@ -53,11 +53,11 @@
       "4                                 Earl Felton   \n",
       "\n",
       "                                              actors original_release_date  \\\n",
-      "0  Logan Lerman, Brandon T. Jackson, Alexandra Da...            2010-02-12   \n",
-      "1  Catherine Keener, Amanda Peet, Oliver Platt, R...            2010-04-30   \n",
-      "2  Dudley Moore, Bo Derek, Julie Andrews, Robert ...            1979-10-05   \n",
-      "3  Martin Balsam, John Fiedler, Lee J. Cobb, E.G....            1957-04-13   \n",
-      "4  James Mason, Kirk Douglas, Paul Lukas, Peter L...            1954-01-01   \n",
+      "0  Logan Lerman, Brandon T. Jackson, Alexandra Da...             2/12/2010   \n",
+      "1  Catherine Keener, Amanda Peet, Oliver Platt, R...             4/30/2010   \n",
+      "2  Dudley Moore, Bo Derek, Julie Andrews, Robert ...             10/5/1979   \n",
+      "3  Martin Balsam, John Fiedler, Lee J. Cobb, E.G....             4/13/1957   \n",
+      "4  James Mason, Kirk Douglas, Paul Lukas, Peter L...              1/1/1954   \n",
       "\n",
       "   ...      production_company  tomatometer_status tomatometer_rating  \\\n",
       "0  ...        20th Century Fox              Rotten               49.0   \n",
@@ -173,7 +173,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df.dropna(axis=0, inplace=True)\n",
-      "C:\\Users\\nicholas.ayala\\AppData\\Local\\Temp\\ipykernel_15076\\1174239350.py:26: SettingWithCopyWarning: \n",
+      "C:\\Users\\nicholas.ayala\\AppData\\Local\\Temp\\ipykernel_42776\\1174239350.py:26: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -237,20 +237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                        directors  tomatometer_rating\n",
-      "0                 Aaron Katz (II)               75.00\n",
-      "1                    Aaron Norris                8.00\n",
-      "2  Aaron Seltzer, Jason Friedberg                1.50\n",
-      "3                   Aaron Woodley               23.50\n",
-      "4                Abbas Kiarostami               89.25\n",
-      "directors\n"
+      "Aaron Katz (II) 75.0\n",
+      "('Aaron Katz (II)', 75.0)\n",
+      "Aaron Norris 8.0\n",
+      "('Aaron Norris', 8.0)\n",
+      "[('Aaron Norris', 8.0)]\n",
+      "Aaron Seltzer, Jason Friedberg 1.5\n",
+      "('Aaron Seltzer, Jason Friedberg', 1.5)\n",
+      "[('Aaron Norris', 8.0), ('Aaron Seltzer, Jason Friedberg', 1.5)]\n"
      ]
     },
     {
@@ -260,7 +261,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m avgRating:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(row)\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHolding...\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     directorsList\u001b[38;5;241m.\u001b[39mappend(row)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ((index \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[9], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m         bucket10\u001b[38;5;241m.\u001b[39mappend(rowValue)\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28mprint\u001b[39m(bucket10)\n\u001b[1;32m---> 13\u001b[0m         \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mholding...\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(bucket10)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Lets convert the avgRating series to numpy array\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# avgRatingNp = avgRating.to_numpy()\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# x = avgRatingNp[:, 0]\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# plt.scatter(x, y, alpha=0.5)\u001b[39;00m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# plt.show()\u001b[39;00m\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\ipykernel\\kernelbase.py:1270\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1268\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1269\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1270\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1271\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1272\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1273\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1274\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1275\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\ipykernel\\kernelbase.py:1313\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1310\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1311\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1312\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1313\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1314\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1315\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
@@ -270,17 +271,19 @@
    "source": [
     "# Lets show a plot to show the average ratings for the director(s)\n",
     "# Lets begin by creating some buckets divisible by 10\n",
-    "buckets = []\n",
-    "directorsList = []\n",
-    "print(avgRating.head())\n",
-    "for row in avgRating:\n",
-    "    print(row)\n",
-    "    input(\"Holding...\")\n",
-    "    directorsList.append(row)\n",
-    "    if ((index + 1) % 10 == 0):\n",
-    "        buckets.append(directorsList)\n",
-    "        directorsList = []\n",
-    "print(buckets)\n",
+    "bucket10, bucket20, bucket30, bucket40, bucket50, bucket60, bucket70, bucket80, bucket90 = ([] for i in range(9))\n",
+    "\n",
+    "# print(avgRating.head())\n",
+    "for index, row in avgRating.iterrows():\n",
+    "    print(row['directors'], row['tomatometer_rating'])\n",
+    "    rowValue = row['directors'], row['tomatometer_rating']\n",
+    "    print(rowValue)\n",
+    "    if row['tomatometer_rating'] <= 10:\n",
+    "        bucket10.append(rowValue)\n",
+    "        print(bucket10)\n",
+    "        input(\"holding...\")\n",
+    "    \n",
+    "print(bucket10)\n",
     "# Lets convert the avgRating series to numpy array\n",
     "# avgRatingNp = avgRating.to_numpy()\n",
     "# x = avgRatingNp[:, 0]\n",
