Adding a few project files and langchain example with astra

--- a/project/src/moviesDF.ipynb
+++ b/project/src/moviesDF.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nicholas.ayala\\Repos\\GenAITraining\\pythonExercises\\project\\src\\utilities\\utils.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.dropna(axis=0, inplace=True)\n",
-      "C:\\Users\\nicholas.ayala\\AppData\\Local\\Temp\\ipykernel_32204\\3837836770.py:25: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  directorDf.drop(directorDf[directorDf['directors'] == director].index, inplace=True, axis=0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -30,15 +13,46 @@
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain.agents.agent_toolkits import create_sql_agent\n",
+    "from langchain_astradb import AstraDBVectorStore\n",
+    "from langchain_core.documents import Document\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.chains import ConversationChain\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.utilities.sql_database import SQLDatabase\n",
+    "from sqlalchemy import create_engine\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "openaiApiKey = os.getenv(\"OPENAI_API_KEY\")\n",
+    "gptEngine = \"gpt-3.5-turbo\"\n",
+    "ASTRA_DB_APPLICATION_TOKEN = os.getenv(\"ASTRA_DB_APPLICATION_TOKEN\")\n",
+    "ASTRA_DB_API_ENDPOINT = os.getenv(\"ASTRA_DB_API_ENDPOINT\")\n",
     "\n",
     "dataSource = \"../data/rotten_tomatoes_movies.csv\"\n",
-    "# Read the csv source file that is located in the data folder\n",
     "df = pd.read_csv(dataSource)\n",
+    "dbEngine = create_engine(\"sqlite:///movies.db\")\n",
+    "df.to_sql(\"movies\", dbEngine, index=False, if_exists='replace')\n",
+    "db = SQLDatabase(engine=dbEngine)\n",
+    "print(db.dialect)\n",
+    "print(db.get_usable_table_names())\n",
+    "print(db.table_info)\n",
+    "print(db.run(\"Select * from movies\"))\n",
     "# print(\"Dataframe head analysis \\n\", df.head())\n",
     "# print(\"\\n Dataframe null value analysis \\n\", df.isnull().sum())\n",
     "# print(\"\\n Unique Directos analysis \\n\", df['directors'].unique())\n",
-    "# print(\"\\n Dataframe information \\n\", df.describe())\n",
-    "\n",
+    "# print(\"\\n Dataframe information \\n\", df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Clean up the data for processing\n",
     "columns = ['movie_title', 'genres', 'directors', 'tomatometer_rating']\n",
     "directorDf = utils.clean_dataset(columns, df)\n",
