Fixed issue with inserting documents into AstraDB. Insert batch of 15

--- a/AI/astraLangChainExample.ipynb
+++ b/AI/astraLangChainExample.ipynb
@@ -54,7 +54,7 @@
     "    embedding=embedding,\n",
     "    collection_name=\"movies\",\n",
     "    token=ASTRA_DB_APPLICATION_TOKEN,\n",
-    "    api_endpoint=ASTRA_DB_API_ENDPOINT,\n",
+    "    api_endpoint=ASTRA_DB_API_ENDPOINT\n",
     ")\n",
     "\n",
     "movies_dataset = load_dataset(\"csv\", data_files=\"../project/data/rotten_tomatoes_movies.csv\")[\"train\"]\n",
