--- a/project/src/moviesDF.ipynb
+++ b/project/src/moviesDF.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Clean up the data for processing\n",
-    "columns = ['movie_title', 'genres', 'directors', 'tomatometer_rating']\n",
+    "columns = ['movie_title','movie_info', 'genres', 'directors', 'tomatometer_rating']\n",
     "directorDf = utils.clean_dataset(columns, df)\n",
     "\n",
     "# Get the amount of times a Director appears in the dataset\n",
